force-app/main/default/objects/SCOC__Packet__c/SCOC__Packet__c.object-meta.xml
<CustomObject>
    <description>Response Entity Packets</description>
    <label>Packet</label>
    <nameField>
        <displayFormat>PCKT-{00000}</displayFormat>
        <label>Packet Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Packets</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>