force-app/main/default/objects/SCOC__Packet__c/fields/SCOC__Code__c.field-meta.xml
<CustomField>
    <fullName>SCOC__Code__c</fullName>
    <description>Packet code.</description>
    <label>Code</label>
    <length>40</length>
    <type>Text</type>
</CustomField>