force-app/main/default/objects/SCOC__Packet__c/fields/SCOC__StatusCode__c.field-meta.xml
<CustomField>
    <fullName>SCOC__StatusCode__c</fullName>
    <description>Packet status code.</description>
    <label>Status Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>