force-app/main/default/objects/SCOC__Packet__c/fields/SCOC__StatusText__c.field-meta.xml
<CustomField>
    <fullName>SCOC__StatusText__c</fullName>
    <description>Packet status text.</description>
    <label>Status Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>